--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "useTabs": false,
     "printWidth": 80,
     "endOfLine": "auto"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
   }
 }
